<resources>
    <string name="app_name">Email Tracking</string>

    <string name="title_activity_menu_navegacion">Menú principal</string>
    <string name="action_logout">Cerrar sesión</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="error_login_response">Sus datos no son correctos</string>
    <string name="error_sellers_response">No se ha podido obtener la lista de vendedores</string>

    <string name="failure_retrofit_response">El servidor no ha respondido adecuadamente</string>
    <string name="failure_retrofit_callback">Verifique su conexión a internet</string>
    <string name="error_clients_by_sellers_response">No se ha podido obtener la cantidad de clientes por vendedor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_first_name">Nombres</string>
    <string name="client_last_name">Apellidos</string>
    <string name="client_email">Correo electrónico</string>
    <string name="sub_category">Sub Categoría</string>
    <string name="category">Categoría</string>
    <string name="error_client_first_name">Debe ingresar un nombre</string>
    <string name="error_client_last_name">Debe ingresar un apellido</string>
    <string name="error_client_email">Debe ingresar el correo del cliente</string>
    <string name="action_save">Guardar</string>
    <string name="success_new_client">Cliente registrado correctamente</string>
    <string name="failure_new_client">Ocurrió un problema al intentar registrar al cliente</string>
    <string name="in_development">En desarrollo</string>
    <string name="link_name">Nombre del enlace</string>
    <string name="link_url">URL</string>
    <string name="link_type">Tipo de enlace</string>
    <string name="success_new_link">Enlace registrado correctamente</string>
    <string name="failure_new_link">Ocurrió un problema al registrar el enlace</string>
    <string name="filter">Filtrar</string>
    <string name="year_missing">Olvidó seleccionar un año</string>
    <string name="month_missing">Olvidó seleccionar un mes</string>
</resources>
